diss: concluding-discussion

--- a/alternatives.tex
+++ b/alternatives.tex
@@ -13,7 +13,7 @@ and consider a number of inference models that could serve as an alternative to 
 The two frameworks based on sets of priors
 in alternative to the model framework discussed in this thesis are 
 \emph{neighbourhood models} (Section~\ref{sec:alternatives:neighbourhood}) and
-the \emph{density-ratio class} (Section~\ref{alternatives:drc}).%
+the \emph{density-ratio class} (Section~\ref{sec:alternatives:drc}).%
 \footnote{By some authors, the density ratio class is considered a neighbourhood model
 where instead of one central distribution $\p_0$ two distributions are considered
 \parencite[e.g.,][\S 4.3]{1991:pericchi}.
@@ -89,7 +89,7 @@ may instead not be closed under Bayesian updating.
 
 
 \subsection{Density Ratio Class}
-\label{alternatives:drc}
+\label{sec:alternatives:drc}
 
 %Below, we will briefly describe an interesting model class
 %that can be defined using conjugate or non-conjugate distributions 
@@ -413,7 +413,7 @@ to model posterior imprecision in dependence of sample size. % or \pdc***.
 The model is thus inable to model prior near-ignorance, and does not exhibit
 a natural decrease in imprecision as information accumulates.%
 %to reflect \pdc***\ in posterior inferences.%
-\footnote{However, a possibly attractive approach could be to
+\footnote{\label{foot:coolenplusrinderknecht}However, a possibly attractive approach could be to
 combine ideas from \textcite{1993:coolen} and \textcite{2011:rinderknecht:diss}
 in a density ratio class model with non-Bayesian updating
 where $c_n$ is defined such that posterior inferences also reflect \pdc.}
