--- a/isipta11.tex
+++ b/isipta11.tex
@@ -1048,7 +1048,8 @@ expert disagrees, while the restriction on weights provides a
 guaranteed minimum level for the individual contributions to the combined
 inference.
 
-It should be emphasized that the weighted inference model has wide applicability. The key idea is to combine,
+It should be emphasized that the weighted inference model has wide applicability.
+The key idea is to combine,
 by imprecise weighting, the actual inferences resulting from
 multiple models, and as such there is much scope for the use and
 further development of this approach. The individual models could
@@ -1079,7 +1080,7 @@ course the further data need in case first sampled data is in
 conflict with $(n^i,s^i)$, and the behaviour of the models of Section~\ref{sec:ibbm} in such cases.
 
 The weighted inference method combines the inferences based on two
-models, and can be generalized to allow more than two models and
+models, and can be generalised to allow more than two models and
 different inferential methods. It is also possible to allow more
 imprecision in each of the models that are combined, leading to more
 parameters in the overall model that can be used to control the
