--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -87,7 +87,7 @@ defined by the set of updated parameters $\PN$.
 
 When the credal set $\MZ$ is taken to contain convex combinations (i.e., finite mixtures) of parametric priors,
 $\MZ$ is very flexible and contains, through the mixture distributions, a wealth of distributional shapes.%
-\footnote{Indeed, if the parametric distributions are normal distributions
+\footnote{\label{foot:denseinthespaceof}Indeed, if the parametric distributions are normal distributions
 and $\PZ$ is large enough,
 it can be assumed that $\MZ$ contains a very wide range of priors,
 as mixtures of normal distributions are dense in the space of well-behaved probability distributions
